# generate-watertight-meshes-and-sdf-grids

./: CMakeLists.txt
src/: mesh2df.cu  mesh2df.cuh  sdf.cu  sdf.cuh  voxelize_project.h  watershed.cu  watershed.cuh
src/base/: LoaderMesh.h  SVox.h  Triangle.h  Vox.h
